fixed spacing issue on mobile

--- a/main.css
+++ b/main.css
@@ -1328,6 +1328,9 @@ section {
 
     .skill-category-header strong {
         font-size: 15px;
+        letter-spacing: 0px;
+        word-spacing: normal;
+        text-align: left;
     }
 
     .skill-category-icon {
